@@ -9,13 +9,13 @@ dependencies {
                 project(':grails-plugin-servlets'),
                 project(':grails-plugin-url-mappings'),
                 project(':grails-plugin-services'),
+                project(':grails-plugin-scaffolding'),
                 project(':grails-hibernate'),
                 project(':grails-bootstrap'),
                 project(':grails-crud')
 }
 test {
-//    maxParallelForks = 4
-    forkEvery = 100
-    maxHeapSize = '1024m'
+    maxParallelForks = 2
+    jvmArgs = ['-Xmx1024M','-XX:MaxPermSize=256m']
 }
 
